--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tarea Flow | Fluye con tus tareas, del Por hacer al Hecho</title>
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="tareasflow.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-  </head>
+    <link rel="stylesheet" href="/src/assets/css/global.css" />
+    <link rel="stylesheet" href="/src/assets/css/sidebardesktop.css" />
+    <link rel="stylesheet" href="/src/assets/css/mobilenavbar.css" />
+    <link rel="stylesheet" href="/src/assets/css/home/cards.css" />
+    <link rel="stylesheet" href="/src/assets/css/home/resumesection.css" />
+    <link rel="stylesheet" href="/src/assets/css/home/cards.css" />
+    <link rel="stylesheet" href="/src/assets/css/home/hero.css" />
+
+    </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+    </body>
 </html>
